--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,64 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Details | <%= post.username %></title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style4.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
+<% layout("/layouts/boilerplate")-%>
+
     <div class="post-container">
         <h1>Post Details</h1>    
-        <div class="post-content">
-            <h2 class="user"><%= post.username %></h2>
+         <h2 class="user"><%= post.username %></h2>
+          <h2 class="title"><%= post.title %></h2>
+        <div class="post-show">
+           
             <h3 class="content"><%= post.content %></h3>
         </div>
 
         <a href="/posts" class="back-link">← Back to all posts</a>
 
     </div>
-    <footer class="site-footer">
-    <div class="footer-container">
-        <div class="footer-section">
-           <h4>About Smaash Clone</h4>
-            <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Press</a></li>
-            </ul>
-        </div>
-        
-        <div class="footer-section">
-            <h4>Help</h4>
-            <ul>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-            </ul>
-        </div>
-        
-        <div class="footer-section">
-            <h4>Connect</h4>
-             <ul class="social-links">
-                    <a href="https://github.com/AshishSinsinwal"  target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-github"></i> GitHub
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/ashish-sinsinwal-a31b48318/"target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-linkedin"></i> LinkedIn
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
     
-    <div class="copyright">
-        <p>Made with &hearts; By Team Smaash</p>
-        <p>&copy; 2025 Quora Clone. All rights reserved.</p>
-    </div>
-</footer>
-</body>
-</html>
