--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,7 +2,7 @@
 
 <header class="navbar">
   <div class="logo">
-    <i class="fa-solid fa-blog"></i>
+    <a href="/posts"><i class="fa-solid fa-blog"></i></a>
   </div>
 
   <input type="checkbox" id="menu-toggle">
