--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -24,7 +24,7 @@
 
             
              <div class="form-group">
-                <label for="password">Paaswrord</label>
+                <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="password" maxlength="15" minlength="4">
             </div>
             
