--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,12 +8,12 @@
         <form action="/login" method="post">
             <div class="form-group">
                 <label for="user">Username</label>
-                <input type="text" name="username" id="user" placeholder="Enter Your Username" required>
+                <input type="text" name="username" id="user" placeholder="Enter Your Username" required minlength="3" maxlength="15">
             </div>
      
              <div class="form-group">
                 <label for="password">Passwrord</label>
-                <input type="password" name="password" id="password" placeholder="Enter Your password" maxlength="15" required>
+                <input type="password" name="password" id="password" placeholder="Enter Your password" minlength="4" maxlength="15" required>
             </div>
             
            
